# Computer-Graphics-Final-Project

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  release.yml
assets/: CREDITS.md
docs/dev/: project_requirements.md
docs/report/: final.typ  theme.typ
include/future_gaze/: app.hpp  glut_window.hpp
include/future_gaze/anim/: animator.hpp  easing.hpp
include/future_gaze/camera/: orbit_camera.hpp
include/future_gaze/math/: geometry.hpp  mat4.hpp  quat.hpp  vec3.hpp
include/future_gaze/observer/: frame_recorder.hpp  frame_stream.hpp
include/future_gaze/physics/: physics_world.hpp
include/future_gaze/render/: material.hpp  mesh.hpp  obj_loader.hpp  renderable.hpp  renderer.hpp  scoped_gl.hpp  texture.hpp
include/future_gaze/scene/: builders.hpp  gaze_controller.hpp  node_names.hpp  room_bounds.hpp  scene_animation.hpp  scene_graph.hpp  scene_node.hpp  tf_tree.hpp
scripts/: README.md  convert_glb_to_obj.py  fetch_assets.py  gen_textures.py  observe_app.py  pyproject.toml
src/: app.cpp  glut_window.cpp  main.cpp
src/camera/: orbit_camera.cpp
src/math/: mat4.cpp  quat.cpp
src/observer/: frame_bridge.cpp  frame_recorder.cpp
src/physics/: physics_world.cpp
src/render/: material.cpp  mesh.cpp  obj_loader.cpp  renderer.cpp  texture.cpp
src/scene/: ai_characters.cpp  dinner_table.cpp  gaze_controller.cpp  prediction_core.cpp  scene_animation.cpp  scene_graph.cpp  scene_node.cpp  story_props.cpp  tf_tree.cpp
tests/: camera_tests.cpp  geometry_tests.cpp  physics_tests.cpp  scene_invariant_tests.cpp  tf_tree_tests.cpp
